近期学习内容

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -63,3 +63,6 @@ https://mp.weixin.qq.com/s?__biz=MzI3ODcxMzQzMw==&mid=2247491631&idx=2&sn=42537e
 如何用 SpringBoot 实现并发登录人数控制（附代码）
 
 [https://mp.weixin.qq.com/s?__biz=MzU2MTI4MjI0MQ==&mid=2247493102&idx=1&sn=28441e8e73619492d2273215f16f4afe&chksm=fc798840cb0e0156814ea37f9f6f82cdc0c0664e66d6f6d806fd37257a96d896ce1e6ca27f9d&scene=126&sessionid=1597309217&key=d346675dd6ecd6cce249b405bb9a90aa79b7c54f7c569368c928f8a0fba084157e2d5f8bcf520c432a62b78b75bcf34f637ffffec8103fe30ba90c88876a70ded60bb9c899a3c67f5ca58b254e3f8075&ascene=1&uin=MjMwMTEyMDg3NA%3](https://mp.weixin.qq.com/s?__biz=MzU2MTI4MjI0MQ==&mid=2247493102&idx=1&sn=28441e8e73619492d2273215f16f4afe&chksm=fc798840cb0e0156814ea37f9f6f82cdc0c0664e66d6f6d806fd37257a96d896ce1e6ca27f9d&scene=126&sessionid=1597309217&key=d346675dd6ecd6cce249b405bb9a90aa79b7c54f7c569368c928f8a0fba084157e2d5f8bcf520c432a62b78b75bcf34f637ffffec8103fe30ba90c88876a70ded60bb9c899a3c67f5ca58b254e3f8075&ascene=1&uin=MjMwMTEyMDg3NA%3D%3D&devicetype=Windows+10+x64&version=62090529&lang=zh_CN&exportkey=ARCIMmczi34%2FUt%2BLRaSVoLc%3D&pass_ticket=t%2BgkW4A7OsLCDXILVKSMzwz8xeSaWFX3xaI%2FbssAZqhRTK%2BwqmE9Ja3V%2F1FpPdSK)
+
+#### **2020年10月17日**
+近期学习：百度ai中图像识别与人脸识别的初探，模拟并发场景的分布式锁控制。
