近期学习内容补充

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1,4 +1,4 @@
-#### 2020年7月8日
+## 2020年7月8日
 
 结束c#基础学习（高级编程除外），开始u3d基础学习,b站香槟堡伯爵讲课过于拖沓，考虑更换视频
 文字教程
@@ -6,35 +6,34 @@ http://c.biancheng.net/unity3d/
 视频教程
 慕课 https://www.imooc.com/learn/313
 
-#### 2020年7月9日
+## 2020年7月9日
 
 游戏开发学习进度：观看慕课u3d基础视频
 
-#### 2020年7月10日
+## 2020年7月10日
 
-微服务学习：阿里云大学视频 https://edu.aliyun.com/roadmap/microservice?spm=5176.13345299.1392477.2.4a83f153Rw9qMH
-
-#### 2020年7月11日
+微服务学习：阿里云大学视频 https://edu.aliyun.com/roadmap/microservice?spm=5176.13345299.1392477.2.4a83f153Rw9qM
+## 2020年7月11日
 
 微服务学习：继续视频，根据官方文档建立demo
 
-#### 2020年7月13日
+## 2020年7月13日
 
 微服务学习：初步认识了nacos服务发现，学习nacos分布式配置中心
 
-#### 2020年7月28日
+## 2020年7月28日
 
 日子一下子就过去了，此后一直没有继续学习
 早上再早起二十分钟，七点二十出门，
 早上花费的时间大致在35分钟左右，通勤40分钟，八点到公司的话，至少要在六点四十起床，那么起码八点-九点半之间可以自由学习
 
-#### 2020年7月29日
+## 2020年7月29日
 
-#### **2020年8月03日**
+## **2020年8月03日**
 
 改变计划，8月份先啃spring源码
 
-#### **2020年8月04日**
+## **2020年8月04日**
 
 改变计划，8月份先啃spring源码或并发、优化、性能等相关问题
 
@@ -44,25 +43,40 @@ https://mp.weixin.qq.com/s?__biz=MzI4Njk5OTg1MA==&mid=2247484933&idx=1&sn=fcb8f0
 
 https://mp.weixin.qq.com/s?__biz=MzI3ODcxMzQzMw==&mid=2247491631&idx=2&sn=42537edb7cc04a7e4e60c5727ec348ac&chksm=eb506519dc27ec0ffd7a4e107063b6b2b1013aefd8ed7e97e359ae9a6144181fce8ff76c66ac&scene=21#wechat_redirect
 
-#### **2020年8月06日**
+## **2020年8月06日**
 
 今日、疲惫。。。。。划水
 
-#### **2020年8月07日**
+## **2020年8月07日**
 
 乱掉了。。。。。随缘学习吧
 
-#### **2020年8月13日**
+## **2020年8月13日**
 
 近日：activiti
 
-#### **2020年8月14日**
+## **2020年8月14日**
 
-**看到的文章**
+## **看到的文章**
 
 如何用 SpringBoot 实现并发登录人数控制（附代码）
 
 [https://mp.weixin.qq.com/s?__biz=MzU2MTI4MjI0MQ==&mid=2247493102&idx=1&sn=28441e8e73619492d2273215f16f4afe&chksm=fc798840cb0e0156814ea37f9f6f82cdc0c0664e66d6f6d806fd37257a96d896ce1e6ca27f9d&scene=126&sessionid=1597309217&key=d346675dd6ecd6cce249b405bb9a90aa79b7c54f7c569368c928f8a0fba084157e2d5f8bcf520c432a62b78b75bcf34f637ffffec8103fe30ba90c88876a70ded60bb9c899a3c67f5ca58b254e3f8075&ascene=1&uin=MjMwMTEyMDg3NA%3](https://mp.weixin.qq.com/s?__biz=MzU2MTI4MjI0MQ==&mid=2247493102&idx=1&sn=28441e8e73619492d2273215f16f4afe&chksm=fc798840cb0e0156814ea37f9f6f82cdc0c0664e66d6f6d806fd37257a96d896ce1e6ca27f9d&scene=126&sessionid=1597309217&key=d346675dd6ecd6cce249b405bb9a90aa79b7c54f7c569368c928f8a0fba084157e2d5f8bcf520c432a62b78b75bcf34f637ffffec8103fe30ba90c88876a70ded60bb9c899a3c67f5ca58b254e3f8075&ascene=1&uin=MjMwMTEyMDg3NA%3D%3D&devicetype=Windows+10+x64&version=62090529&lang=zh_CN&exportkey=ARCIMmczi34%2FUt%2BLRaSVoLc%3D&pass_ticket=t%2BgkW4A7OsLCDXILVKSMzwz8xeSaWFX3xaI%2FbssAZqhRTK%2BwqmE9Ja3V%2F1FpPdSK)
 
-#### **2020年10月17日**
-近期学习：百度ai中图像识别与人脸识别的初探，模拟并发场景的分布式锁控制。
+
+## **2020年8月20日**
+
+谷粒商城2020列入计划，先处理原先的一些半途没做的东西吧。
+2020年9月10日**
+## **redissionClient。
+
+## **2020年10月17日**
+
+近期学习：
+
+百度ai中图像识别与人脸识别的初探
+进度：基础api了解完毕，正在申请离线采集SDK和离线识别SDK
+
+模拟并发场景的分布式锁控制，进行了简单的jmeter测试
+
+sentinel学习
