近期学习内容补充

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -67,8 +67,8 @@ https://mp.weixin.qq.com/s?__biz=MzI3ODcxMzQzMw==&mid=2247491631&idx=2&sn=42537e
 ## **2020年8月20日**
 
 谷粒商城2020列入计划，先处理原先的一些半途没做的东西吧。
-2020年9月10日**
-## **redissionClient。
+## **2020年9月10日**
+redissionClient。
 
 ## **2020年10月17日**
 
