近期学习内容补充

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -77,6 +77,8 @@ redissionClient。
 百度ai中图像识别与人脸识别的初探
 进度：基础api了解完毕，正在申请离线采集SDK和离线识别SDK
 
+### **（要注意的是，激活后只有三个月的有效期，不能浪费掉）**
+
 模拟并发场景的分布式锁控制，进行了简单的jmeter测试
 
 sentinel学习
