开始大数据入门学习

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -82,3 +82,34 @@ redissionClient。
 模拟并发场景的分布式锁控制，进行了简单的jmeter测试
 
 sentinel学习
+
+## **2020年10月19日**
+
+zookeeper应用场景、选举机制、数据模型
+
+> https://www.bilibili.com/video/BV1JT4y1g7nM?p=28
+
+开始大数据基础学习
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
