--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -93,9 +93,18 @@ zookeeper应用场景、选举机制、数据模型
 
 
 
+## **2020年10月21日**
 
+学习axios，但在尝试与vue整合是，发现建立新的完整的vue项目并不熟练，需要从建vue项目开始，包括路由配置等等
 
+## **2020年10月22日**
 
+- 近期观看黑马官方的大数据hadoop入门教程，感觉很多都只是照课件按部就班念，讲到一些指令，一些需要安装的软件，甚至没有提一下作用，并且教程使用的软件都比较旧，故停止观看。另觅。
+- 需要整理一下网盘，快满了，去除意义不大的视频
+
+## **2020年10月23日**
+
+- Python入门学习，基本语法
 
 
 
