--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -121,9 +121,12 @@ zookeeper应用场景、选举机制、数据模型
 - gogs搁置（ssh方式多分支），回自己的电脑上试
 - hadoop环境搭建
 - hadoop集群搭建
-- 搭了一天的环境。。。。。
+- 搭了一天的环境
 
+## **2020年10月29日**
 
+- hadoop集群搭建成功
+- 学习hdfs
 
 
 
