--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -146,6 +146,7 @@ zookeeper应用场景、选举机制、数据模型
 ## **2020年11月05日**
 
 - springboot构建电商秒杀基础项目 项目搭建  配置mybatis自动生成工具遇到一些问题
+- 明日：下载慕课网友提供的代码调通，检查合理性，把重点放在秒杀设计和优化上。
 
 
 
