--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -148,5 +148,7 @@ zookeeper应用场景、选举机制、数据模型
 - springboot构建电商秒杀基础项目 项目搭建  配置mybatis自动生成工具遇到一些问题
 - 明日：下载慕课网友提供的代码调通，检查合理性，把重点放在秒杀设计和优化上。
 
+## **2020年11月06日**
 
+- springboot构建电商秒杀基础项目搭建完成，github push速度过慢，需要寻找有效的解决方法
 
