--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -152,3 +152,10 @@ zookeeper应用场景、选举机制、数据模型
 
 - springboot构建电商秒杀基础项目搭建完成，github push速度过慢，需要寻找有效的解决方法
 
+## 2020年11月11日
+
+- springboot秒杀项目
+  - 页面调整
+  - 图片显示
+  - 静态资源处理
+
