--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -159,3 +159,8 @@ zookeeper应用场景、选举机制、数据模型
   - 图片显示
   - 静态资源处理
 
+## 2020年11月12日
+
+- springboot秒杀项目
+  - 并发容量问题
+    - tomcat连接数、最大等待队列数量、最大线程数配置
