--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -164,3 +164,15 @@ zookeeper应用场景、选举机制、数据模型
 - springboot秒杀项目
   - 并发容量问题
     - tomcat连接数、最大等待队列数量、最大线程数配置
+
+## 2020年11月13日
+
+- 解决虚拟机网络突然不通的问题
+
+  - 可能原因：
+
+  之前装过virtualbox，后来卸掉了，可能网络有冲突
+
+  将VMnet1禁掉后，成功ping通
+
+![img](D:\AppData\YNote\zhuzexiong@vip.qq.com\90856dc11397421f8ea35daff2a6166e\clipboard.png)
