--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -175,4 +175,37 @@ zookeeper应用场景、选举机制、数据模型
 
   将VMnet1禁掉后，成功ping通
 
-![img](D:\AppData\YNote\zhuzexiong@vip.qq.com\90856dc11397421f8ea35daff2a6166e\clipboard.png)
+  解决虚拟机网络突然不通的问题
+
+- springboot秒杀项目
+
+  - 分布式扩展
+
+    - 单机容量问题--水平拓展
+
+      将应用部署在多台服务器上
+
+    - nginx安装（openResty）
+
+      1. 前置条件
+
+         `yum install pcre-devel openssl-devel gcc curl`
+
+      2. 解压
+
+      3. 初始化配置
+
+         `./configure`
+
+         `gmake`
+
+         `gmake install`
+
+         结果路径：
+
+         /usr/local/openresty
+
+      4. 启动
+
+         `sbin/nginx -c conf/nginx.conf `
+
