--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -209,3 +209,109 @@ zookeeper应用场景、选举机制、数据模型
 
          `sbin/nginx -c conf/nginx.conf `
 
+## 2020年11月15日
+
+- 解决centos下，设置静态ip后，与宿主机ping通但与外部网络无法ping通（以百度为例）
+
+  - 虚拟机网络设置中，对于VMnet8，不要勾选“使用本地DHCP服务将ip分配给虚拟机”
+  - 确定宿主机的dns服务器设置
+  - 在虚拟机中，将网关设置为 vm虚拟网络配置中“net设置“中设置的网关
+  - 在虚拟机中，设置dns1，值为宿主机中设置dns服务器地址
+  - 若出现虚拟机可ping通宿主机和外部网络，但宿主机无法ping通虚拟机网络，则需要检查网络适配器中`VMware Virtual Ethernet Adapter for VMnet8`的配置，手动配置网关等
+
+- mysql授权远程连接
+
+`grant all privileges on *.* to root@'%' identified by 'dandelion';`
+
+将所有的权限授权给从任何ip登录的root用户，并需要验证密码
+
+“%”可替换为允许连接的某个ip
+
+验证：
+
+`select host,user,password from user;`
+
+- springboot秒杀项目
+  - 分布式扩展
+
+    - nginx反向代理配置，实现动静分离
+
+      配置样例：
+
+          upstream backend_server{
+                  server pc-3 weight=1;
+                  server pc-4 weight=1;
+              }
+          server {
+              listen       80;
+              server_name  localhost;
+              #charset koi8-r;
+          
+              #access_log  logs/host.access.log  main;
+          
+              location /resources/ {
+                  alias  /usr/local/openresty/nginx/html/;
+                  index  index.html index.htm;
+              }
+              location / {
+                  proxy_pass http://backend_server;
+                  proxy_set_header Host $http_host:$proxy_port;
+                  proxy_set_header X-Real-Ip $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              }
+              ······
+          }
+
+- - **实测结果（线程数：1000，循环次数10）**：
+
+单机：
+
+| Label    | # 样本 | 平均值 | 中位数 | 90% 百分位 | 95% 百分位 | 99% 百分位 | 最小值 | 最大值 | 异常 % | 吞吐量    | 接收 KB/sec | 发送 KB/sec |
+| -------- | ------ | ------ | ------ | ---------- | ---------- | ---------- | ------ | ------ | ------ | --------- | ----------- | ----------- |
+| HTTP请求 | 10000  | 745    | 712    | 916        | 1424       | 10257      | 1      | 11071  | 0.00%  | 789.82703 | 245.28      | 0           |
+
+负载均衡：
+
+| Label    | # 样本 | 平均值 | 中位数 | 90% 百分位 | 95% 百分位 | 99% 百分位 | 最小值 | 最大值 | 异常 % | 吞吐量    | 接收 KB/sec | 发送 KB/sec |
+| -------- | ------ | ------ | ------ | ---------- | ---------- | ---------- | ------ | ------ | ------ | --------- | ----------- | ----------- |
+| HTTP请求 | 10000  | 363    | 105    | 862        | 1188       | 6217       | 1      | 6606   | 25.66% | 1116.5699 | 1007.98     | 0           |
+
+
+
+
+
+- **nginx设置与后端服务器之间建立的连接为长连接(按教程上讲是为了减少短连接创建关闭的资源消耗,未测试)**
+
+  - 默认的http协议为1.0，将http协议改为1.1，并且将连接策略“proxy_set_header Connection”置空
+
+  - 配置样例：
+
+        upstream backend_server{
+                server pc-3 weight=1;
+                server pc-4 weight=1;
+                keepalive 30
+            }
+        server {
+            listen       80;
+            server_name  localhost;
+            #charset koi8-r;
+        
+            #access_log  logs/host.access.log  main;
+        
+            location /resources/ {
+                alias  /usr/local/openresty/nginx/html/;
+                index  index.html index.htm;
+            }
+            location / {
+                proxy_pass http://backend_server;
+                proxy_set_header Host $http_host:$proxy_port;
+                proxy_set_header X-Real-Ip $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_http_version 1.1;
+                proxy_set_header Connection "";
+            }
+            ······
+        }
+
+    
+
