--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -264,13 +264,13 @@ zookeeper应用场景、选举机制、数据模型
 
 - - **实测结果（线程数：1000，循环次数10）**：
 
-单机：
+单机(url:http://192.168.80.133/user/getUser?id=5)：
 
 | Label    | # 样本 | 平均值 | 中位数 | 90% 百分位 | 95% 百分位 | 99% 百分位 | 最小值 | 最大值 | 异常 % | 吞吐量    | 接收 KB/sec | 发送 KB/sec |
 | -------- | ------ | ------ | ------ | ---------- | ---------- | ---------- | ------ | ------ | ------ | --------- | ----------- | ----------- |
 | HTTP请求 | 10000  | 745    | 712    | 916        | 1424       | 10257      | 1      | 11071  | 0.00%  | 789.82703 | 245.28      | 0           |
 
-负载均衡：
+负载均衡(url:http://192.168.80.131/user/getUser?id=5)：
 
 | Label    | # 样本 | 平均值 | 中位数 | 90% 百分位 | 95% 百分位 | 99% 百分位 | 最小值 | 最大值 | 异常 % | 吞吐量    | 接收 KB/sec | 发送 KB/sec |
 | -------- | ------ | ------ | ------ | ---------- | ---------- | ---------- | ------ | ------ | ------ | --------- | ----------- | ----------- |
