20201115学习记录--deploy方式运行jar

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -232,12 +232,43 @@ zookeeper应用场景、选举机制、数据模型
 `select host,user,password from user;`
 
 - springboot秒杀项目
+  
+- deploy方式启动
+  
+  - 创建deploy.sh
+  
+  
+  
+    ```shell
+    nohup java -Xms400m -Xmx400m -XX:NewSize=200m -XX:MaxNewSize=200m  -jar demo-0.0.1-SNAPSHOT.jar  --spring.config.addition-location=/my/projects/application.properties
+    ```
+  
+    
+  
+    - 运行
+  
+    
+  
+    ```
+    ./deploy.sh
+    ```
+  
+    
+  
+    - 查看运行日志
+  
+  ```
+  tail -200f nohup.out
+  ```
+  
+
+  
   - 分布式扩展
-
+  
     - nginx反向代理配置，实现动静分离
-
+  
       配置样例：
-
+  
           upstream backend_server{
                   server pc-3 weight=1;
                   server pc-4 weight=1;
@@ -261,7 +292,7 @@ zookeeper应用场景、选举机制、数据模型
               }
               ······
           }
-
+  
 - - **实测结果（线程数：1000，循环次数10）**：
 
 单机(url:http://192.168.80.133/user/getUser?id=5)：
