--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -349,3 +349,39 @@ zookeeper应用场景、选举机制、数据模型
 ## 2020年11月16日
 
 - jfinal全局异常拦截处理
+
+## 2020年11月17日
+
+- 分布式扩展
+
+  - 分布式会话
+
+    - springboot+springsession+redis
+
+      **遇到的问题**
+
+      写入session，随即输出，有值
+
+      再次请求获取，null，疑是跨域问题
+
+      同域测试正常
+
+      `@RequestMapping("redisTest") @ResponseBody public Object redisTest(HttpServletRequest request){    request.getSession().setAttribute("request Url",request.getRequestURL());    return request.getRequestURL(); } @RequestMapping("getRedis") @ResponseBody public Object getRedis(HttpServletRequest request){    return request.getSession().getAttribute("request Url"); }`
+
+      
+
+      `org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'enableRedisKeyspaceNotificationsInitializer' defined in class path resource [org/springframework/session/data/redis/config/annotation/web/http/RedisHttpSessionConfiguration.class]: Invocation of init method failed; nested exception is org.springframework.data.redis.RedisConnectionFailureException: Unable to connect to Redis; nested exception is io.lettuce.core.RedisConnectionException: Unable to connect to 192.168.80.132:6379`
+
+    DENIED Redis is running in protected mode because protected mode is enabled, no bind address was specified, no authentication password is requested to clients. In this mode connections are only accepted from the loopback interface. If you want to connect from external computers to Redis you may adopt one of the following solutions: 1) Just disable protected mode sending the command 'CONFIG SET protected-mode no' from the loopback interface by connecting to Redis from the same host the server is running, however MAKE SURE Redis is not publicly accessible from internet if you do so. Use CONFIG REWRITE to make this change permanent. 2) Alternatively you can just disable the protected mode by editing the Redis configuration file, and setting the protected mode option to 'no', and then restarting the server. 3) If you started the server manually just for testing, restart it with the '--protected-mode no' option. 4) Setup a bind address or an authentication password. NOTE: You only need to do one of the above things in order for the server to start accepting connections from the outside.
+
+    翻译：
+
+    拒绝的Redis正在保护模式下运行，因为已启用保护模式，未指定绑定地址，未向客户端请求身份验证密码。在此模式下，只接受来自环回接口的连接。如果您想从外部计算机连接到Redis，您可以采用以下解决方案之一：1）只需禁用保护模式，通过从服务器运行的同一主机连接到Redis，从环回接口发送命令“CONFIG SET protected mode no”；但是，如果您这样做吧。使用CONFIG REWRITE使此更改永久化。2） 或者，您可以通过编辑Redis配置文件并将protected mode选项设置为“no”，然后重新启动服务器来禁用保护模式。3） 如果您只是为了测试而手动启动服务器，请使用“-protected mode no”选项重新启动服务器。4） 设置绑定地址或身份验证密码。注意：您只需执行上述操作之一，服务器就可以开始接受来自外部的连接。
+
+    
+
+    **尝试修改：将redis.conf文件中protected-mode设置为no，禁用保护模式即可**
+
+    - 
+
+    
