20201118学习记录--redis查询缓存基础用法

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -385,3 +385,76 @@ zookeeper应用场景、选举机制、数据模型
     - 
 
     
+
+## 2020年11月18日
+
+- springboot秒杀项目
+
+  - 分布式扩展
+
+    - 分布式会话
+
+      - 基于token
+
+        localStorage+redis+token
+
+  - 查询缓存优化
+
+    - redis查询缓存基础用法
+      - redisTemplate
+      - 自定义RedisTemplate
+
+```java
+package cn.running4light.demo.config;
+
+import cn.running4light.demo.serializer.JodaDateTimeJsonDeSerializer;
+import cn.running4light.demo.serializer.JodaDateTimeJsonSerializer;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.jsontype.impl.LaissezFaireSubTypeValidator;
+import com.fasterxml.jackson.databind.module.SimpleModule;
+import org.joda.time.DateTime;
+import org.springframework.context.annotation.Bean;
+import org.springframework.data.redis.connection.RedisConnectionFactory;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.serializer.Jackson2JsonRedisSerializer;
+import org.springframework.data.redis.serializer.StringRedisSerializer;
+import org.springframework.session.data.redis.config.annotation.web.http.EnableRedisHttpSession;
+import org.springframework.stereotype.Component;
+
+/**
+ *
+ */
+@Component
+@EnableRedisHttpSession(maxInactiveIntervalInSeconds = 3600)
+public class RedisConfig {
+    // 定制化redisTemplate
+    @Bean
+    public RedisTemplate redisTemplate(RedisConnectionFactory redisConnectionFactory){
+        RedisTemplate redisTemplate = new RedisTemplate();
+        redisTemplate.setConnectionFactory(redisConnectionFactory);
+        // 设置key序列化方式--string形式
+        StringRedisSerializer stringRedisSerializer = new StringRedisSerializer();
+        redisTemplate.setKeySerializer(stringRedisSerializer);
+        // 设置value序列化方式
+        Jackson2JsonRedisSerializer jackson2JsonRedisSerializer = new Jackson2JsonRedisSerializer(Object.class);
+
+        // redis：扩充特殊对象的字符转换
+        ObjectMapper objectMapper = new ObjectMapper();
+        SimpleModule simpleModule = new SimpleModule();
+        simpleModule.addSerializer(DateTime.class,new JodaDateTimeJsonSerializer());
+        simpleModule.addDeserializer(DateTime.class,new JodaDateTimeJsonDeSerializer());
+
+//        objectMapper.enableDefaultTyping(ObjectMapper.DefaultTyping.NON_FINAL);
+        objectMapper.activateDefaultTyping(LaissezFaireSubTypeValidator.instance ,ObjectMapper.DefaultTyping.NON_FINAL);// 不完全懂基础作用
+        objectMapper.registerModule(simpleModule);
+        jackson2JsonRedisSerializer.setObjectMapper(objectMapper);
+
+        redisTemplate.setValueSerializer(jackson2JsonRedisSerializer);
+
+        return redisTemplate;
+    }
+}
+```
+
+
+
