20201118学习记录--本地热点缓存

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -458,3 +458,101 @@ public class RedisConfig {
 
 
 
+
+
+- 本地热点缓存
+
+  - guava cache
+
+  
+
+  - 依赖
+
+  ```
+          <dependency>
+              <groupId>com.google.guava</groupId>
+              <artifactId>guava</artifactId>
+              <version>23.0</version>
+          </dependency>
+  ```
+
+  
+
+  - 封装
+
+  ```java
+  import cn.running4light.demo.service.CacheService;
+  import com.google.common.cache.Cache;
+  import com.google.common.cache.CacheBuilder;
+  import org.springframework.stereotype.Service;
+  
+  import javax.annotation.PostConstruct;
+  import java.util.concurrent.TimeUnit;
+  
+  @Service
+  public class CacheServiceImpl implements CacheService {
+  
+      private Cache<String, Object> commonCache;
+  
+      // bean加载时优先执行
+      @PostConstruct
+      public void init() {
+          commonCache = CacheBuilder.newBuilder()
+                  // 初始化容量
+                  .initialCapacity(10)
+                  // 设置缓存中最大可以存储的key值数量，超过后会按照LRU的策略移除缓存项
+                  .maximumSize(100)
+                  // 写入缓存后的过期时间（本地热点缓存生命周期需要比redis短很多）
+                  .expireAfterWrite(30, TimeUnit.SECONDS).build();
+      }
+  
+      @Override
+      public void setCommonCache(String key, Object value) {
+          this.commonCache.put(key, value);
+      }
+  
+      @Override
+      public Object getFormCommonCache(String key) {
+          return this.commonCache.getIfPresent(key);
+      }
+  }
+  ```
+
+  
+
+  - 使用
+
+  ```java
+      public CommonResult getItem(@RequestParam(name = "id") Integer id) {
+          // 取本地热点缓存
+          ItemModel itemModel = (ItemModel) cacheService.getFormCommonCache("item_" + id);
+          System.err.println("本地热点缓存：\t"+itemModel);
+          if (itemModel == null) {
+              // 取redis缓存
+              itemModel = (ItemModel) redisTemplate.opsForValue().get("item_" + id);
+              System.err.println("redis缓存：\t"+itemModel);
+              if (itemModel == null) {
+                  // 取数据库数据
+                  itemModel = itemService.getItemById(id);
+                  System.err.println("数据库：\t"+itemModel);
+                  redisTemplate.opsForValue().set("item_" + id, itemModel);
+                  redisTemplate.expire("item_" + id, 50, TimeUnit.SECONDS);// 5秒过期时间
+              }
+              cacheService.setCommonCache("item_" + id, itemModel);// 更新本地热点缓存
+          }
+          ItemVO itemVO = convertFromItemModel(itemModel);
+          return CommonResult.create(itemVO);
+      }
+  ```
+
+  
+
+  - 压测：（**未测**）
+
+  
+
+  
+
+  - 缺点：
+    - jvm内存资源
+    - 数据变动的更新策略
