20201119nginx proxy cache lua

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -556,3 +556,40 @@ public class RedisConfig {
   - 缺点：
     - jvm内存资源
     - 数据变动的更新策略
+
+## 2020年11月19日
+
+- springboot秒杀项目
+
+  - 
+
+  - nginx proxy cache
+
+    - 配置
+
+      nginx.conf
+
+      ```properties
+      #申明一个cache缓存节点的内容(配置nginx proxy cache)
+      proxy_cache_path /usr/local/openresty/nginx/tmp_cache levels=1:2 keys_zone=tmp_cache:100m inactive=7d max_size=10g;
+       #(配置nginx proxy cache)start
+       proxy_cache tmp_cache;
+       proxy_cache_key $uri;
+       proxy_cache_valid 200 206 304 302 7d;
+       #(配置nginx proxy cache)end
+      ```
+
+      
+
+    - 压测(url:192.168.80.131:/item/get?id=6)
+
+    | Label    | # 样本 | 平均值 | 中位数 | 90% 百分位 | 95% 百分位 | 99% 百分位 | 最小值 | 最大值 | 异常 % | 吞吐量     | 接收 KB/sec | 发送 KB/sec |
+    | -------- | ------ | ------ | ------ | ---------- | ---------- | ---------- | ------ | ------ | ------ | ---------- | ----------- | ----------- |
+    | HTTP请求 | 100000 | 0      | 0      | 1          | 2          | 7          | 0      | 132    | 0.00%  | 3349.85931 | 1867.79     | 0           |
+    | 总体     | 100000 | 0      | 0      | 1          | 2          | 7          | 0      | 132    | 0.00%  | 3349.85931 | 1867.79     | 0           |
+
+    实验结果为较极端情况（**缓存失效时间设置为7天**），实际很短
+
+  - 
+
+- 
