--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -590,6 +590,146 @@ public class RedisConfig {
 
     实验结果为较极端情况（**缓存失效时间设置为7天**），实际很短
 
-  - 
+  - nginx lua
+
+    - 简介
+
+      - 协程机制
+
+        依附于线程的内存模型，切换开销小
+
+        与阻塞归还执行权，代码同步
+
+        无需加锁
+
+      - lua协程机制
+
+      - nginx协程机制
+
+        - nginx每个工作进程创建一个lua虚拟机
+        - 工作进程内的所有协程共享一个vm
+        - 每个外部请求由一个lua协程处理，之间数据隔离
+        - lua代码调用io等异步接口时，协程被挂起，
+        - 自动保存，不阻塞工作进程
+        - io异步操作完成后还原协程上下文，代码继续执行
+        - 处理阶段
+          - 
+
+      - nginx lua插载点
+
+      - openresty
+
+    - 实战
+
+      - init_by_lua_file
+
+      ```nginx
+      #lua配置start
+      #通过init.lua启动
+      init_by_lua_file init_by_lua_file /usr/local/openresty/lua/init.lua;
+      #lua配置end
+      ```
+
+      
+
+      - content_by_lua_file(内容输出节点)
+
+        
+
+        ```nginx
+        location /itemByLua {
+                        content_by_lua_file /usr/local/openresty/lua/itemByLua.lua;
+                }
+        
+        ```
+
+        ```lua
+        ngx.exec("/item/get?id=6")
+        ```
+
+        > http://192.168.80.131/itemByLua
+
+      - 
+
+      - lua_shared_dict
+
+        
+
+      - 
+
+      - openresty对redis 的支持
+
+        - 请求先通过nginx走redis查询，有值结束，无值走web应用接口
+
+          请求-->nginx-->redis-->web接口-->本地热点数据-->redis-->数据库
+
+        - lua
+
+          ```lua
+          local args = ngx.req.get_uri_args()
+          local id = args["id"]
+          local redis = require "resty.redis"
+          local cache = redis:new()
+          local ok,err = cache:connect("pc-2",6379)
+          cache:select(10)
+          local item_model = cache:get("item_"..id)
+          if item_model == ngx.null or item_model == nil then
+                  local resp = ngx.location.capture("/item/get?id="..id)
+                  item_model = resp.body
+          end
+          ngx.say(item_model)
+          ```
+
+          
+
+        - nginx
+
+          ```nginx
+          location /itemByNginxRedis/get {
+          	default_type "application/json";
+          	content_by_lua_file /usr/local/openresty/lua/itemByNginxRedis.lua;
+          }
+          ```
+
+          url
+
+          > http://192.168.80.131/itemByNginxRedis?id=6
+
+        - 不生效解决：
+
+          lua中每次获取到的缓存为 nullnil
+
+          猜测：没有指定索引
+
+          补充索引选择：
+
+          cache:select(10)
+
+          **不知道怎么切换，网上没找到方法，待处理**
+
+      - 
+
+      - 
+
+
+## 2020年11月20日
 
 - 
+
+- 页面静态化
+
+  暂时跳过
+
+- 交易性能优化
+
+  - 性能瓶颈
+    - 库存行锁
+    - 交易验证万全依赖数据库
+      - 用户风控策略优化
+      - 活动校验策略优化
+      - 
+
+- 
+
+- 
+
