--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -729,6 +729,85 @@ public class RedisConfig {
       - 活动校验策略优化
       - 
 
+## 2020年11月23日
+
+
+
+- 
+
+  - 交易性能优化
+
+    - 性能瓶颈
+
+      - 库存行锁优化
+
+      1. 缓存化
+      2. 异步同步数据库
+      3. 最终一致性
+      4. 异步消息扣减数据库库存
+
+    - 
+
+  - 遇到的问题
+
+  - 虚拟机网络突然不通
+
+    - 解决：
+
+      ```properties
+      Nov 23 13:31:23 pc-1 systemd: Starting LSB: Bring up/down networking...
+      Nov 23 13:31:23 pc-1 network: Bringing up loopback interface:  [  OK  ]
+      Nov 23 13:31:23 pc-1 network: Bringing up interface ens33:  Error: Connection activation failed: No suitable device found for this connection (device lo not available because device is strictly unmanaged).
+      Nov 23 13:31:23 pc-1 network: [FAILED]
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 network: RTNETLINK answers: File exists
+      Nov 23 13:31:23 pc-1 systemd: network.service: control process exited, code=exited status=1
+      Nov 23 13:31:23 pc-1 systemd: Failed to start LSB: Bring up/down networking.
+      Nov 23 13:31:23 pc-1 systemd: Unit network.service entered failed state.
+      Nov 23 13:31:23 pc-1 systemd: network.service failed.
+      
+      ```
+
+      ```shell
+      chkconfig NetworkManager off
+      chkconfig network on
+      service NetworkManager stop
+      service network start
+      ifup ens33
+      ```
+
+      成功解决：
+
+      ```
+      ip addr show
+      ```
+
+      ```properties
+      1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
+          link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+          inet 127.0.0.1/8 scope host lo
+             valid_lft forever preferred_lft forever
+          inet6 ::1/128 scope host 
+             valid_lft forever preferred_lft forever
+      2: ens33: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
+          link/ether 00:50:56:2c:2d:82 brd ff:ff:ff:ff:ff:ff
+          inet 192.168.80.131/24 brd 192.168.80.255 scope global ens33
+             valid_lft forever preferred_lft forever
+          inet6 fe80::250:56ff:fe2c:2d82/64 scope link 
+             valid_lft forever preferred_lft forever
+      ```
+
+      
+
+    - 
+
 - 
 
 - 
