--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -806,9 +806,34 @@ public class RedisConfig {
 
       
 
-    - 
 
-- 
+  
+
+
+## 2020-11-26记录
+
+- springboot对事务提交后回调的支持
+
+  - TransactionSynchronizationManager
+
+    ```java
+    TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronizationAdapter() {
+        @Override
+        public void afterCommit() {
+            ... code ...
+        }
+    });
+    ```
+
+    
+
+  - 
+
+- rocketMQ对事务的支持
+
+  [rocket transaction]: http://rocketmq.apache.org/docs/transaction-example/
+
+  
 
 - 
 
