20201129--秒杀项目进度（剩余流量削峰、防刷限流）

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -807,7 +807,7 @@ public class RedisConfig {
       
 
 
-  
+
 
 
 ## 2020-11-26记录
@@ -837,3 +837,13 @@ public class RedisConfig {
 
 - 
 
+## 2020-11-29记录
+
+- 库存流水机制
+- 售罄机制
+  - 
+- 流量削峰
+  - 秒杀令牌
+    - 
+  - 秒杀大闸
+  - 流量泄洪
