20201130--秒杀项目进度（秒杀令牌、秒杀大闸）

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -847,3 +847,12 @@ public class RedisConfig {
     - 
   - 秒杀大闸
   - 流量泄洪
+
+## 2020-11-30记录
+
+- 尽量在今天结束seckill
+- 流量削峰
+  - 秒杀令牌
+    - 
+  - 秒杀大闸（限制令牌生成）
+  - 流量泄洪
