20201201--秒杀项目完成

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -856,3 +856,38 @@ public class RedisConfig {
     - 
   - 秒杀大闸（限制令牌生成）
   - 流量泄洪
+
+## 2020-12-01记录
+
+- 队列泄洪
+
+- 验证码
+
+- 限流
+
+  - 方式
+
+    - 令牌桶算法
+    - 漏桶算法
+
+  - 限流力度
+
+    - 接口维度
+    - 总维度
+
+  - 限流范围
+
+    - 集群
+
+      - 依赖redis或其他中间技术做统一计数器
+
+    - 单机
+
+      - 负载均衡前提下
+
+        ```java
+        RateLimiter
+        ```
+
+    - 
+
