--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -887,3 +887,20 @@ public class RedisConfig {
 ------
 
 ### 思考进一步学习计划
+
+
+
+## 2021-03-30记录
+
+- 数据库索引
+
+  - s
+
+  ![image-20210330093319168](C:\Users\10574\AppData\Roaming\Typora\typora-user-images\image-20210330093319168.png)
+
+- s
+
+## 2021-05-12记录
+
+- 完成了牛客JZ6算法题，主要涉及二分查找
+- 开始leetcode
