小阶段总结

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -904,3 +904,17 @@ public class RedisConfig {
 
 - 完成了牛客JZ6算法题，主要涉及二分查找
 - 开始leetcode
+
+## 2021-06-02记录
+
+- 小阶段总结：
+  - 数据结构：数组、栈、队列、链表
+  - 几个基本算法：
+    - 线性查找
+    - 选择排序
+    - 归并排序
+    - 插入排序
+    - 快速排序的多种实现
+    - 二分查找的多种实现
+  - 完成部分leetCode和牛客题目
+
