--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -926,3 +926,21 @@ public class RedisConfig {
 
 - 二分搜索树原理即简单应用
 - 开始java架构师体系课
+
+## 2021-06-04记录
+
+- 回顾一下springcloud先
+
+  - 课程参照慕课学习路线《SpringCloud+Alibaba 从入门到进阶》供五门课：
+
+    416 - Spring Cloud+Vue前后端分离开发企业级在线视频课程系统
+    
+    456-Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力
+    
+    基于SpringCloud+Kubernetes ，微服务的容器化持续交付实战
+    
+    深度解锁SpringCloud主流组件 一战解决微服务诸多难题
+    
+    面向未来微服务:Spring Cloud Alibaba从入门到进阶
+
+- 
