--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -944,3 +944,8 @@ public class RedisConfig {
     面向未来微服务:Spring Cloud Alibaba从入门到进阶
 
 - 
+
+## 2021-06-07记录
+
+- 《SpringCloud+Alibaba 从入门到进阶》前五章
+
