--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -947,5 +947,12 @@ public class RedisConfig {
 
 ## 2021-06-07记录
 
-- 《SpringCloud+Alibaba 从入门到进阶》前五章
+- 《SpringCloud+Alibaba 从入门到进阶》
+
+  略过部分可补看，主要是有穿插一些小技巧
+
+  - 前五章√
+  - 第六章代码生成去略过）
+  - 第7、8略过
+  - 第九章断点续传
 
