--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -956,8 +956,358 @@ public class RedisConfig {
   - 第7、8略过
   - 第九章断点续传
 
+```vue
+<template>
+  <div>
+    <button type="button" v-on:click="selectFile()" class="btn btn-white btn-default btn-round">
+      <i class="ace-icon fa fa-upload"></i>
+      {{text}}
+    </button>
+    <input class="hidden" type="file" ref="file" v-on:change="uploadFile()" v-bind:id="inputId+'-input'">
+  </div>
+</template>
+
+<script>
+  export default {
+    name: 'big-file',
+    props: {
+      text: {
+        default: "上传大文件"
+      },
+      inputId: {
+        default: "file-upload"
+      },
+      suffixs: {
+        default: []
+      },
+      use: {
+        default: ""
+      },
+      shardSize: {
+        default: 50 * 1024
+      },
+      url: {
+        default: "oss-append"
+      },
+      afterUpload: {
+        type: Function,
+        default: null
+      },
+    },
+    data: function () {
+      return {
+      }
+    },
+    methods: {
+      uploadFile () {
+        let _this = this;
+        let formData = new window.FormData();
+        let file = _this.$refs.file.files[0];
+
+        console.log(JSON.stringify(file));
+        /*
+          name: "test.mp4"
+          lastModified: 1901173357457
+          lastModifiedDate: Tue May 27 2099 14:49:17 GMT+0800 (中国标准时间) {}
+          webkitRelativePath: ""
+          size: 37415970
+          type: "video/mp4"
+        */
+
+        // 生成文件标识，标识多次上传的是不是同一个文件
+        let key = hex_md5(file.name + file.size + file.type);
+        let key10 = parseInt(key, 16);
+        let key62 = Tool._10to62(key10);
+        console.log(key, key10, key62);
+        console.log(hex_md5(Array()));
+        /*
+          d41d8cd98f00b204e9800998ecf8427e
+          2.8194976848941264e+38
+          6sfSqfOwzmik4A4icMYuUe
+         */
+
+        // 判断文件格式
+        let suffixs = _this.suffixs;
+        let fileName = file.name;
+        let suffix = fileName.substring(fileName.lastIndexOf(".") + 1, fileName.length).toLowerCase();
+        let validateSuffix = false;
+        for (let i = 0; i < suffixs.length; i++) {
+          if (suffixs[i].toLowerCase() === suffix) {
+            validateSuffix = true;
+            break;
+          }
+        }
+        if (!validateSuffix) {
+          Toast.warning("文件格式不正确！只支持上传：" + suffixs.join(","));
+          $("#" + _this.inputId + "-input").val("");
+          return;
+        }
+
+        // 文件分片
+        // let shardSize = 10 * 1024 * 1024;    //以10MB为一个分片
+        // let shardSize = 50 * 1024;    //以50KB为一个分片
+        let shardSize = _this.shardSize;
+        let shardIndex = 1;		//分片索引，1表示第1个分片
+        let size = file.size;
+        let shardTotal = Math.ceil(size / shardSize); //总片数
+
+        let param = {
+          'shardIndex': shardIndex,
+          'shardSize': shardSize,
+          'shardTotal': shardTotal,
+          'use': _this.use,
+          'name': file.name,
+          'suffix': suffix,
+          'size': file.size,
+          'key': key62
+        };
+
+        _this.check(param);
+      },
+
+
+
+      /**
+       * 检查文件状态，是否已上传过？传到第几个分片？
+       */
+      check (param) {
+        let _this = this;
+        _this.$ajax.get(process.env.VUE_APP_SERVER + '/file/admin/check/' + param.key).then((response)=>{
+          let resp = response.data;
+          if (resp.success) {
+            let obj = resp.content;
+            if (!obj) {
+              param.shardIndex = 1;
+              console.log("没有找到文件记录，从分片1开始上传");
+              _this.upload(param);
+            } else if (obj.shardIndex === obj.shardTotal) {
+              // 已上传分片 = 分片总数，说明已全部上传完，不需要再上传
+              Toast.success("文件极速秒传成功！");
+              _this.afterUpload(resp);
+              $("#" + _this.inputId + "-input").val("");
+            }  else {
+              param.shardIndex = obj.shardIndex + 1;
+              console.log("找到文件记录，从分片" + param.shardIndex + "开始上传");
+              _this.upload(param);
+            }
+          } else {
+            Toast.warning("文件上传失败");
+            $("#" + _this.inputId + "-input").val("");
+          }
+        })
+      },
+
+      /**
+       * 将分片数据转成base64进行上传
+       */
+      upload (param) {
+        let _this = this;
+        let shardIndex = param.shardIndex;
+        let shardTotal = param.shardTotal;
+        let shardSize = param.shardSize;
+        let fileShard = _this.getFileShard(shardIndex, shardSize);
+        // 将图片转为base64进行传输
+        let fileReader = new FileReader();
+
+        Progress.show(parseInt((shardIndex - 1) * 100 / shardTotal));
+        fileReader.onload = function (e) {
+          let base64 = e.target.result;
+          // console.log("base64:", base64);
+
+          param.shard = base64;
+
+          _this.$ajax.post(process.env.VUE_APP_SERVER + '/file/admin/' + _this.url, param).then((response) => {
+            let resp = response.data;
+            console.log("上传文件成功：", resp);
+            Progress.show(parseInt(shardIndex * 100 / shardTotal));
+            if (shardIndex < shardTotal) {
+              // 上传下一个分片
+              param.shardIndex = param.shardIndex + 1;
+              _this.upload(param);
+            } else {
+              Progress.hide();
+              _this.afterUpload(resp);
+              $("#" + _this.inputId + "-input").val("");
+            }
+          });
+        };
+        fileReader.readAsDataURL(fileShard);
+      },
+
+      getFileShard (shardIndex, shardSize) {
+        let _this = this;
+        let file = _this.$refs.file.files[0];
+        let start = (shardIndex - 1) * shardSize;	//当前分片起始位置
+        let end = Math.min(file.size, start + shardSize); //当前分片结束位置
+        let fileShard = file.slice(start, end); //从文件中截取当前的分片数据
+        return fileShard;
+      },
+
+      selectFile () {
+        let _this = this;
+        $("#" + _this.inputId + "-input").trigger("click");
+      }
+    }
+  }
+</script>
+
+```
+
+
+
+```java
+package com.course.file.controller.admin;
+
+@RequestMapping("/admin")
+@RestController
+public class UploadController {
+
+    private static final Logger LOG = LoggerFactory.getLogger(UploadController.class);
+
+    public static final String BUSINESS_NAME = "文件上传";
+
+    @Value("${file.domain}")
+    private String FILE_DOMAIN;
+
+    @Value("${oss.domain}")
+    private String OSS_DOMAIN;
+
+    @Value("${file.path}")
+    private String FILE_PATH;
+
+    @Value("${vod.accessKeyId}")
+    private String accessKeyId;
+
+    @Value("${vod.accessKeySecret}")
+    private String accessKeySecret;
+
+    @Resource
+    private FileService fileService;
+
+    @RequestMapping("/upload")
+    public ResponseDto upload(@RequestBody FileDto fileDto) throws Exception {
+        LOG.info("上传文件开始");
+        String use = fileDto.getUse();
+        String key = fileDto.getKey();
+        String suffix = fileDto.getSuffix();
+        String shardBase64 = fileDto.getShard();
+        MultipartFile shard = Base64ToMultipartFile.base64ToMultipart(shardBase64);
+
+        // 保存文件到本地
+        FileUseEnum useEnum = FileUseEnum.getByCode(use);
+
+        //如果文件夹不存在则创建
+        String dir = useEnum.name().toLowerCase();
+        File fullDir = new File(FILE_PATH + dir);
+        if (!fullDir.exists()) {
+            fullDir.mkdir();
+        }
+
+//        String path = dir + File.separator + key + "." + suffix + "." + fileDto.getShardIndex();
+        String path = new StringBuffer(dir)
+                .append(File.separator)
+                .append(key)
+                .append(".")
+                .append(suffix)
+                .toString(); // course\6sfSqfOwzmik4A4icMYuUe.mp4
+        String localPath = new StringBuffer(path)
+                .append(".")
+                .append(fileDto.getShardIndex())
+                .toString(); // course\6sfSqfOwzmik4A4icMYuUe.mp4.1
+        String fullPath = FILE_PATH + localPath;
+        File dest = new File(fullPath);
+        shard.transferTo(dest);
+        LOG.info(dest.getAbsolutePath());
+
+        LOG.info("保存文件记录开始");
+        fileDto.setPath(path);
+        fileService.save(fileDto);
+
+        ResponseDto responseDto = new ResponseDto();
+        fileDto.setPath(FILE_DOMAIN + path);
+        responseDto.setContent(fileDto);
+
+        if (fileDto.getShardIndex().equals(fileDto.getShardTotal())) {
+            this.merge(fileDto);
+        }
+        return responseDto;
+    }
+
+    public void merge(FileDto fileDto) throws Exception {
+        LOG.info("合并分片开始");
+        String path = fileDto.getPath(); //http://127.0.0.1:9000/file/f/course\6sfSqfOwzmik4A4icMYuUe.mp4
+        path = path.replace(FILE_DOMAIN, ""); //course\6sfSqfOwzmik4A4icMYuUe.mp4
+        Integer shardTotal = fileDto.getShardTotal();
+        File newFile = new File(FILE_PATH + path);
+        FileOutputStream outputStream = new FileOutputStream(newFile, true);//文件追加写入
+        FileInputStream fileInputStream = null;//分片文件
+        byte[] byt = new byte[10 * 1024 * 1024];
+        int len;
+
+        try {
+            for (int i = 0; i < shardTotal; i++) {
+                // 读取第i个分片
+                fileInputStream = new FileInputStream(new File(FILE_PATH + path + "." + (i + 1))); //  course\6sfSqfOwzmik4A4icMYuUe.mp4.1
+                while ((len = fileInputStream.read(byt)) != -1) {
+                    outputStream.write(byt, 0, len);
+                }
+            }
+        } catch (IOException e) {
+            LOG.error("分片合并异常", e);
+        } finally {
+            try {
+                if (fileInputStream != null) {
+                    fileInputStream.close();
+                }
+                outputStream.close();
+                LOG.info("IO流关闭");
+            } catch (Exception e) {
+                LOG.error("IO流关闭", e);
+            }
+        }
+        LOG.info("合并分片结束");
+
+        System.gc();
+        Thread.sleep(100);
+
+        // 删除分片
+        LOG.info("删除分片开始");
+        for (int i = 0; i < shardTotal; i++) {
+            String filePath = FILE_PATH + path + "." + (i + 1);
+            File file = new File(filePath);
+            boolean result = file.delete();
+            LOG.info("删除{}，{}", filePath, result ? "成功" : "失败");
+        }
+        LOG.info("删除分片结束");
+    }
+
+    @GetMapping("/check/{key}")
+    public ResponseDto check(@PathVariable String key) throws Exception {
+        LOG.info("检查上传分片开始：{}", key);
+        ResponseDto responseDto = new ResponseDto();
+        FileDto fileDto = fileService.findByKey(key);
+        if (fileDto != null) {
+            if (StringUtils.isEmpty(fileDto.getVod())) {
+                fileDto.setPath(OSS_DOMAIN + fileDto.getPath());
+            } else {
+                DefaultAcsClient vodClient = VodUtil.initVodClient(accessKeyId, accessKeySecret);
+                GetMezzanineInfoResponse response = VodUtil.getMezzanineInfo(vodClient, fileDto.getVod());
+                System.out.println("获取视频信息, response : " + JSON.toJSONString(response));
+                String fileUrl = response.getMezzanine().getFileURL();
+                fileDto.setPath(fileUrl);
+            }
+        }
+        responseDto.setContent(fileDto);
+        return responseDto;
+    }
+}
+
+```
+
+
+
 ## 2021-06-09记录
 
 - 《SpringCloud+Alibaba 从入门到进阶》
   - 第九章断点续传√
-  - 
+  - 基于阿里云OSS文件上传
