--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1310,7 +1310,7 @@ public class UploadController {
 
 - 《SpringCloud+Alibaba 从入门到进阶》
   - 第九章断点续传√
-  - 基于阿里云OSS文件上传
+  - 基于阿里云OSS文件上传√
 
 ```java
 @RestController
