通用权限涉及看完，实际没太大用处

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1454,3 +1454,10 @@ public class UploadController {
 
   - 用户管理与登录√
   - 
+
+## 2021-06-10记录
+
+- 《SpringCloud+Alibaba 从入门到进阶》
+  - 通用权限设计√
+  - 网站开发略过
+  - 项目优化
