--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1460,4 +1460,6 @@ public class UploadController {
 - 《SpringCloud+Alibaba 从入门到进阶》
   - 通用权限设计√
   - 网站开发略过
-  - 项目优化
+  - 项目优化--没啥东西
+
+《SpringCloud+Alibaba 从入门到进阶》课程大致过了一遍，偏基础回顾
