--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1463,3 +1463,5 @@ public class UploadController {
   - 项目优化--没啥东西
 
 《SpringCloud+Alibaba 从入门到进阶》课程大致过了一遍，偏基础回顾
+
+有空花时间整理一下有道云笔记的一些知识点到这上面上来。☆☆☆
