--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1465,3 +1465,8 @@ public class UploadController {
 《SpringCloud+Alibaba 从入门到进阶》课程大致过了一遍，偏基础回顾
 
 有空花时间整理一下有道云笔记的一些知识点到这上面上来。☆☆☆
+
+
+
+- [ ] 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+  - [ ] 
