--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1469,4 +1469,5 @@ public class UploadController {
 
 
 - [ ] 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+  - [ ] 代码放到gitee上：https://gitee.com/running4light/springcloudproject
   - [ ] 
