--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1470,4 +1470,16 @@ public class UploadController {
 
 - [ ] 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
   - [ ] 代码放到gitee上：https://gitee.com/running4light/springcloudproject
-  - [ ] 
+
+## 2021-06-15记录
+
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+
+- [x] 微服务架构中统一的api管理设计
+- [x] swagger2的使用
+- [ ] 通行证
+  - [ ] 短信登录注册
+  - [ ] 短信验证码发送与限制
+  - [ ] 分布式会话
+  - [ ] 用户信息完善，OSS/FastDFS
+  - [ ] AOP日志监控
